--- a/WebShop/Views/_ViewImports.cshtml
+++ b/WebShop/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using WebShop
+@using WebShop.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
