--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -16,12 +16,13 @@
          
         </h1>
         <nav>
-           
+           <partial name="_LoginPartial"/>
         </nav>
     </header>
 
     <div>
         @RenderBody()
+
     </div>
 
 
@@ -30,7 +31,7 @@
             &#9400; @DateTime.Now.ToShortDateString() Webshop Group 2
         </span>
     </footer>
-
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
