--- a/WebShop/wwwroot/css/site.css
+++ b/WebShop/wwwroot/css/site.css
@@ -53,13 +53,6 @@ li {
         font-weight: bold;
     }
 
-.icon-size {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    padding: 10px 10px 10px 10px;
-}
-
 .product-cards__wrapper {
     align-items: center;
     display: flex;
@@ -105,4 +98,7 @@ li {
 .product-cards__name {
     font-weight: bold;
     font-size: large;
+}
+.product-cards__buy {
+    padding: 15px 15px 15px 15px;
 }
