--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -2,22 +2,22 @@
 
 <div class="product-cards">
     @foreach (var item in Model)
-    {        
-        <div class="product-card">
-            <div class="product-cards__wrapper ">
-                <div>
-                    <img class="product-cards__thumbnail" src="~/Images/@item.ImageName" alt="Img">
-                </div>
-                <div class="product-cards__name">
-                    @item.ProductName
-                </div>
-                <div class="product-cards__prices">
-                    SEK @item.Price
-                </div>
-                <div class="product-cards__buy">
-                    <input type="submit" onclick="location.href = '@Url.Action("BuyClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Buy" />
-                </div>
+    {
+    <div class="product-card">
+        <div class="product-cards__wrapper ">
+            <div>
+                <img class="product-cards__thumbnail" src="~/Images/@item.ImageName" alt="Img">
+            </div>
+            <div class="product-cards__name">
+                @item.ProductName
+            </div>
+            <div class="product-cards__prices">
+                SEK @item.Price
+            </div>
+            <div class="product-cards__buy">
+                <input type="submit" onclick="location.href=@Url.Action('BuyClicked','Home', new { productId='item.ProductId'})" class="btn btn-primary" name="btnBuy" value="Buy" />
             </div>
         </div>
-        }
     </div>
+    }
+</div>
