Added ModalBox for Product Information.

--- a/WebShop/Views/Home/Index.cshtml
+++ b/WebShop/Views/Home/Index.cshtml
@@ -2,14 +2,24 @@
 @{
     ViewData["Title"] = "Home";
 }
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id='myModalContent'></div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
-    <h2 class="uppercase">
-        Games
-    </h2>
+    <h2 class="text-uppercase">Games</h2>
     <h5>
         <span>
             @if (ViewBag.Message != null)
-            {@ViewBag.Message}
+            {
+                @ViewBag.Message
+            }
         </span>
     </h5>
     <div>
@@ -19,10 +29,7 @@
             <input asp-for="Filter" />
             <input type="submit" class="btn btn-primary" name="btnFilter" value="Go" />
         </form>
-
     </div>
-
-
     <div class="container">
         <partial name="_partialListProduct" model="Model.ListProductView" />
     </div>
