--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/ModalBox.js" defer></script>
     <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
     <title>@ViewBag.Title</title>
 </head>
@@ -31,5 +34,4 @@
     </footer>
     @RenderSection("Scripts", required: false)
 </body>
-
 </html>
