--- a/WebShop/Views/Shared/_partialCart.cshtml
+++ b/WebShop/Views/Shared/_partialCart.cshtml
@@ -1,30 +1,70 @@
 ﻿@model List<ProductModel>
+<!-- Modal content-->
+<div class="modal-content">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="CartModalLabel">Your Shopping Cart</h4>
+    </div>
 
-@foreach (var item in Model)
-{
-   
+    <div class="modal-body">
+        @if (@Model.Count != 0)
+        {
+            @foreach (var item in Model)
+            {
+
         <div class="product-cart__wrapper ">
-            
-            <div class="product-cart__name">
-                @item.ProductName
+            <div>
+                <img class="cart-thumbnail" src="~/Images/@item.ImageName" alt="Img">
+                <div class="product-cart__name">
+                    @item.ProductName
+                </div>
+            </div>
+          
+            <div class="cart-remove">
+                <a href="javascript:void(0);" class="anchorRemoveFromCart btn btn-secondary" removedata-id="@item.ProductId">Remove</a>
             </div>
             <div class="product-cart__prices">
                 SEK @item.Price
             </div>
 
         </div>
-  
-}
 
-<div class="product-cards__prices">
+            }
 
-    @if (@Model.Sum(i => i.Price) != 0)
-    {
-        <label>Total SEK </label> @Model.Sum(i => i.Price);
-    }
+            @if (@Model.Sum(i => i.Price) != 0)
+            {
+                <div class="cart-footer">
+                    <p class="cart-total">Total </p> 
+
+                    <div class="product-cards__prices ">
+                        SEK  @Model.Sum(i => i.Price)
+                    </div>
+                </div>
+            }
+            else
+            {
+              <div class="cart-footer">
+                   <p class="cart-total">Total  </p>
+
+                   <div class="product-cards__prices">
+                       SEK @Model.Sum(i => i.Price)
+                   </div>
+            </div>
+        }
+
+            <div class="modal-footer modal-padding">
+                <input type="button" data-dismiss="modal" class="btn btn-secondary" name="btnBuy" value="Continue Shopping" />
+
+                <input type="submit" @*onclick="location.href = '@Url.Action("BuyClicked","Home", new { productId=Model.})'"*@ class="btn btn-primary" name="btnBuy" value="Proceed to Payment" />
+
+            </div>
+        }
+        else
+        {
+            <p>Your cart is empty</p>
+        }
+
+    </div>
+
 </div>
 
-    @*<div>
-            <input type="submit" onclick="location.href = '@Url.Action("BuyClicked","Home", new { productId=Model.})'" class="btn btn-primary" name="btnBuy" value="Buy" />
-
-        </div>*@
