--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -20,6 +20,52 @@
                         <input type="submit" onclick="location.href = '@Url.Action("BuyClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Buy" />
 
                     </div>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editProduct">Edit</button>
+
+                        <div class="modal fade" id="editProduct" tabindex="-1" role="dialog" aria-labelledby="editProductLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="editProductLabel">Edit product</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="product-name" class="col-form-label">Product name:</label>
+                                                <input type="text" class="form-control" id="product-name">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="price" class="col-form-label">Price:</label>
+                                                <input type="text" class="form-control" id="price">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="description" class="col-form-label">Description:</label>
+                                                <textarea class="form-control" id="description"></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="image" class="col-form-label">Image filename:</label>
+                                                <input type="text" class="form-control" id="image">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        @*<div class="product-cards__edit">
+                <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Edit" />
+
+            </div>*@
+                    }
+
                 </div>
            </div>
     }
