--- a/WebShop/wwwroot/css/Sidebar.css
+++ b/WebShop/wwwroot/css/Sidebar.css
@@ -4,18 +4,18 @@
 
 .sidebar {
     height: 100%;
-    width: 250px;
+    width: 200px;
     position: fixed;
     z-index: 1;
     top: 0px;
-    right: 0px;
+    left: 0px;
     background: #eee;
     overflow-x: hidden;
     padding: 16px 0;
 }
 
 .sidebar div {
-    padding-left: 30px;
+    padding-left: 10px;
     text-decoration: none;
     font-size: 20px;
     color: #2196F3;
