--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -9,23 +9,41 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="js/ModalBox.js" defer></script>
+    <script src="js/SideBar.js" defer></script>
     <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div class="sidebar">
-        <div>
-            <h3>Shopping Cart</h3>
-        </div>
-        <div>
-            .....
-        </div>
-        <div>
-            .....
-        </div>
-    </div>
+    <div class="wrapper">
+        @if (User.Identity.IsAuthenticated)
+        {
+            <nav id="sidebar">
+                <div class="sidebar-header">
+                    <h3>Shopping Cart</h3>
+                </div>
+                <div>
+                    .....
+                </div>
+                <div>
+                    .....
+                </div>
+            </nav>
+        }
 
-    <div class="main">
+    <div id="content">
+        @if (User.Identity.IsAuthenticated)
+        {
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+
+                </div>
+            </nav>
+        }
         <header>
             <h1 class="text-center">Web Shop</h1>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -44,6 +62,7 @@
             </p>
         </footer>
         @RenderSection("Scripts", required: false)
+    </div>
     </div>
 </body>
 </html>
