--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -29,40 +29,41 @@
                 </div>
             </nav>
         }
+        <div id="content">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
 
-    <div id="content">
-        @if (User.Identity.IsAuthenticated)
-        {
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info">
+                            <i class="fas fa-align-left"></i>
+                            <span>Toggle Sidebar</span>
+                        </button>
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-info">
-                        <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
-                    </button>
-
+                    </div>
+                </nav>
+            }
+            <header>
+                <h1 class="text-center">Web Shop</h1>
+                <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+                    <div class="container">
+                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <partial name="_LoginPartial" />
+                    </div>
+                </nav>
+            </header>
+            <main>
+                <div>
+                    @RenderSection("Scripts", required: false)
+                    @RenderBody()
                 </div>
-            </nav>
-        }
-        <header>
-            <h1 class="text-center">Web Shop</h1>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <partial name="_LoginPartial" />
-                </div>
-            </nav>
-        </header>
-        <div>
-            @RenderBody()
+            </main>
+            <footer>
+                <p class="text-center">
+                    &#9400; @DateTime.Now.ToShortDateString() Group 2
+                </p>
+            </footer>
         </div>
-        <footer>
-            <p class="text-center">
-                &#9400; @DateTime.Now.ToShortDateString() Group 2
-            </p>
-        </footer>
-        @RenderSection("Scripts", required: false)
-    </div>
     </div>
 </body>
 </html>
