--- a/WebShop/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebShop/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@if (User.IsInRole("Admin"))
 {
     <li class="nav-item dropdown show">
-        <a class ="dropdown-toggle nav-link text-dark" href="#" data-toggle="dropdown">Admin</a>
+        <a class ="dropdown-toggle nav-link text-dark" href="#" data-toggle="dropdown">Admin Tools</a>
          <div class=dropdown-menu>
         <a class="dropdown-item" asp-area="Admin" asp-controller="ProductModel" asp-action="Index">Product Manager</a>
         <div class="dropdown-divider"></div>
