--- a/WebShop/wwwroot/css/Sidebar.css
+++ b/WebShop/wwwroot/css/Sidebar.css
@@ -14,6 +14,19 @@
     background: #eee;
     min-height: 100vh;
     transition: all 0.3s;
+    position: fixed;
+}
+
+#sidebarCollapse.active {
+    margin-left: 0px;
+}
+
+#content {
+    margin-left: 260px;
+}
+
+#content.active {
+    margin-left: 0px;
 }
 
 #sidebar.active {
@@ -27,6 +40,14 @@
     }
 
     #sidebar.active {
-        margin-left: 0;
+        margin-left: 0px;
+    }
+
+    #content {
+        margin-left: 0px;
+    }
+
+    #sidebarCollapse {
+        margin-left: 260px;
     }
 }
