--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -22,8 +22,8 @@
                     <input type="submit" onclick="location.href = '@Url.Action("BuyClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Add to Cart" />
                 </div>
 
-                @if (User.IsInRole("Admin"))
-                {
+                @*@if (User.IsInRole("Admin"))
+                {*@
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editProduct">Edit</button>
 
                     <div class="modal fade" id="editProduct" tabindex="-1" role="dialog" aria-labelledby="editProductLabel" aria-hidden="true">
@@ -39,15 +39,15 @@
                                     <form>
                                         <div class="form-group">
                                             <label for="product-name" class="col-form-label">Product name:</label>
-                                            <input type="text" class="form-control" id="product-name">
+                                            <input type="text" class="form-control" id="product-name" placeholder="@item.ProductName">
                                         </div>
                                         <div class="form-group">
                                             <label for="price" class="col-form-label">Price:</label>
-                                            <input type="text" class="form-control" id="price">
+                                            <input type="text" class="form-control" id="price" placeholder="@item.Price">
                                         </div>
                                         <div class="form-group">
                                             <label for="description" class="col-form-label">Description:</label>
-                                            <textarea class="form-control" id="description"></textarea>
+                                            <textarea class="form-control" id="description" placeholder="@item.Description"></textarea>
                                         </div>
                                     </form>
                                 </div>
@@ -62,7 +62,7 @@
                       <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Edit" />
 
                     </div>*@
-                }
+                @*}*@
             </div>
         </div>
     }
