--- a/WebShop/Views/Home/Index.cshtml
+++ b/WebShop/Views/Home/Index.cshtml
@@ -20,16 +20,17 @@
     </div>
 </div>
 
-<div>
+
+@*<div>
     <ul >
         <li>
-            <a href="javascript:void(1);" class="anchorCartList btn btn-primary cart-pos">
+            <a href="javascript:void(0);" class="anchorCartList btn btn-primary cart-pos">
                 Cart
                 @Html.DisplayFor(m => m.ListCart.Count)
             </a>
         </li>
     </ul>
-</div>
+</div>*@
 <div class="container">
     <h2 class="text-uppercase">Games</h2>
     <h5>
