--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/Sidebar.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="js/ModalBox.js" defer></script>
-    <script src="js/SideBar.js" defer></script>
+    
     <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
     <title>@ViewBag.Title</title>
 </head>
@@ -20,19 +17,17 @@
                     <h3>Shopping Cart</h3>
                 </div>
                 <div>
-                    .....
+                    <partial name="_partialShoppingCart">
                 </div>
-                <div>
-                    .....
-                </div>
+                
             </nav>
         <div id="content">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
 
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <button type="button" id="sidebarCollapse">
                             <i class="fas fa-align-left"></i>
-                            <span>Toggle Sidebar</span>
+                            <span><partial name="_partialCartSummary" /></span>
                         </button>
 
                     </div>
@@ -46,6 +41,7 @@
                             </li>
                             <partial name="_AdminMenuPartial" />
                             <partial name="_LoginPartial" />
+                            
                         </ul>
                     </div>
                 </header>
@@ -62,5 +58,8 @@
             </footer>
         </div>
     </div>
+
+
+
 </body>
 </html>
