--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/Sidebar.css" />
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/ModalBox.js" defer></script>
+    <script src="js/SideBar.js" defer></script>
     <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
     <title>@ViewBag.Title</title>
 </head>
@@ -17,7 +20,7 @@
                     <h3>Shopping Cart</h3>
                 </div>
                 <div>
-                    <partial name="_partialShoppingCart">
+                    .....
                 </div>
                 
             </nav>
@@ -25,9 +28,9 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
 
-                        <button type="button" id="sidebarCollapse">
+                        <button type="button" id="sidebarCollapse" class="btn btn-info">
                             <i class="fas fa-align-left"></i>
-                            <span><partial name="_partialCartSummary" /></span>
+                            <span>Toggle Sidebar</span>
                         </button>
 
                     </div>
@@ -41,7 +44,6 @@
                             </li>
                             <partial name="_AdminMenuPartial" />
                             <partial name="_LoginPartial" />
-                            
                         </ul>
                     </div>
                 </header>
@@ -58,8 +60,5 @@
             </footer>
         </div>
     </div>
-
-
-
 </body>
 </html>
