--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -19,8 +19,9 @@
                 <div class="sidebar-header">
                     <h3>Shopping Cart</h3>
                 </div>
-                <div>
-                    .....
+                <div id="cartInfo">
+                      @*<partial name="_partialShoppingCart" />*@
+                    
                 </div>
                 
             </nav>
@@ -30,7 +31,7 @@
 
                         <button type="button" id="sidebarCollapse" class="btn btn-info">
                             <i class="fas fa-align-left"></i>
-                            <span>Toggle Sidebar</span>
+                            <span>Cart</span>
                         </button>
 
                     </div>
