--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -9,57 +9,57 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="js/ModalBox.js" defer></script>
-    <script src="js/SideBar.js" defer></script>
+    @*<script src="js/SideBar.js" defer></script>*@
     <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div class="wrapper">
-            <nav id="sidebar">
-                <div class="sidebar-header">
-                    <h3>Shopping Cart</h3>
-                </div>
-                <div id="cartInfo">
-                      @*<partial name="_partialShoppingCart" />*@
-                    
-                </div>
-                
-            </nav>
-        <div id="content">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
-                            <i class="fas fa-align-left"></i>
-                            <span>Cart</span>
-                        </button>
-
-                    </div>
-                </nav>
-                <header>
-                    <h1 class="text-center">Web Shop</h1>
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <partial name="_AdminMenuPartial" />
-                            <partial name="_LoginPartial" />
-                        </ul>
-                    </div>
-                </header>
-            <main>
-                <div>
-                    @RenderSection("Scripts", required: false)
-                    @RenderBody()
-                </div>
-            </main>
-            <footer>
-                <p class="text-center">
-                    &#9400; @DateTime.Now.ToShortDateString() Group 2
-                </p>
-            </footer>
+    @*<div class="wrapper">*@
+    <!--<nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Shopping Cart</h3>
         </div>
-    </div>
+        <div id="cartInfo">-->
+    @*<partial name="_partialShoppingCart" />*@
+
+    <!--</div>
+
+    </nav>-->
+    @*<div id="content">*@
+    @*<nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Cart</span>
+                </button>
+
+            </div>
+        </nav>*@
+    <header>
+        <h1 class="text-center">Web Shop</h1>
+        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+            <ul class="navbar-nav flex-grow-1">
+                <li class="nav-item">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+                <partial name="_AdminMenuPartial" />
+                <partial name="_LoginPartial" />
+            </ul>
+        </div>
+    </header>
+    <main>
+        <div>
+            @RenderSection("Scripts", required: false)
+            @RenderBody()
+        </div>
+    </main>
+    <footer>
+        <p class="text-center">
+            &#9400; @DateTime.Now.ToShortDateString() Group 2
+        </p>
+    </footer>
+    @*</div>
+        </div>*@
 </body>
 </html>
