--- a/WebShop/Views/Home/Index.cshtml
+++ b/WebShop/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <nav id="sidebar">
+    @*<nav id="sidebar">
         <div class="sidebar-header">
             <h3>Shopping Cart</h3>
         </div>
@@ -23,7 +23,7 @@
 
         </div>
 
-    </nav>
+    </nav>*@
     <div class="container">
         <h2 class="text-uppercase">Games</h2>
         <h5>
