--- a/WebShop/Areas/Admin/Views/ProductModel/Create.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
@@ -28,8 +28,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageName" class="control-label"></label>
-                <input asp-for="ImageName" class="form-control" />
+                <label asp-for="ImageName" class="control-label">Image</label>
+                <input type="file" asp-for="ImageName" accept="image/x-png,image/gif,image/jpeg">
                 <span asp-validation-for="ImageName" class="text-danger"></span>
             </div>
             <div class="form-group">
