--- a/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Edit.cshtml
@@ -10,7 +10,7 @@
 <h4>ProductModel</h4>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
             <input type="hidden" asp-for="ImageName" />
