--- a/WebShop/Views/Shared/_partialShoppingCart.cshtml
+++ b/WebShop/Views/Shared/_partialShoppingCart.cshtml
@@ -45,7 +45,7 @@
 
                 </td>
                 <td>
-                    <a href="@Url.Action("RemoveFromCart","Home", new { productId=group.First().ProductId})">X</a>
+                    <a class="btn cart-remove"  href="@Url.Action("RemoveFromCart","Home", new { productId=group.First().ProductId})">X</a>
 
 
                 </td>
