Fixed the layout in Chopping Cart

--- a/WebShop/Views/Home/Index.cshtml
+++ b/WebShop/Views/Home/Index.cshtml
@@ -11,15 +11,7 @@
         </div>
     </div>
 </div>
-
-<div id="CartModal" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div id='CartModalContent'></div>
-        </div>
-    </div>
-</div>
-
+<!-- Content -->
 <div class="container">
     <h2 class="text-uppercase">Games</h2>
     <h5>
@@ -42,4 +34,5 @@
         <partial name="_partialListProduct" model="Model.ListProductView" />
     </div>
 </div>
+
 
