--- a/WebShop/Areas/Admin/Views/ProductModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/ProductModel/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Admin Tools</h2>
 
 <p>
-    <a asp-action="Create">Create New Product</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
