--- a/WebShop/Areas/Admin/Views/UserModel/CreateUser.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/CreateUser.cshtml
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Discriminator" class="control-label">UserRole (Discriminator)</label>
+                <label asp-for="Discriminator" class="control-label">UserRole</label>
                 <input asp-for="Discriminator" class="form-control" />
                 <span asp-validation-for="Discriminator" class="text-danger"></span>
             </div>
