--- a/WebShop/Views/Shared/_partialListProduct.cshtml
+++ b/WebShop/Views/Shared/_partialListProduct.cshtml
@@ -20,6 +20,7 @@
                 <div class="product-cards__add-to-cart">
                     <a href="javascript:void(0);" class="anchorDetail btn btn-primary" data-id="@item.ProductId">Details</a>
                     <input type="submit" onclick="location.href = '@Url.Action("BuyClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Add to Cart" />
+                    @*<a href="javascript:void(0);" class="anchorEdit btn btn-primary" data-id="@item.ProductId">Edit</a>*@
                 </div>
 
                 @*@if (User.IsInRole("Admin"))
@@ -58,10 +59,10 @@
                             </div>
                         </div>
                     </div>
-                    @*<div class="product-cards__edit">
-                      <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnBuy" value="Edit" />
+                    <div class="product-cards__edit">
+                      <input type="submit" onclick="location.href = '@Url.Action("EditClicked","Home", new { productId=item.ProductId})'" class="btn btn-primary" name="btnEdit" value="ProtoEdit" />
 
-                    </div>*@
+                    </div>
                 @*}*@
             </div>
         </div>
