Added Edit Order Controller and View to Admin-area

--- a/WebShop/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebShop/Views/Shared/_AdminMenuPartial.cshtml
@@ -7,7 +7,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" asp-area="Admin" asp-controller="UserModel" asp-action="Index">User Manager</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" asp-area="" asp-controller="OrderModel" asp-action="Index">Order Manager</a>
+            <a class="dropdown-item" asp-area="Admin" asp-controller="OrderModel" asp-action="Index">Order Manager</a>
         </div>
     </li>
 }
