--- a/WebShop/Views/Shared/_partialEdit.cshtml
+++ b/WebShop/Views/Shared/_partialEdit.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <input type="submit" onclick="location.href = '@Url.Action("Index", "Home")'" class="btn btn-primary" name="btnCancel" value="Cancel" />
+        @*<input type="submit" onclick="location.href = '@Url.Action("Index", "Home")'" class="btn btn-primary" name="btnCancel" value="Cancel" />*@
         <button type="button" class="btn btn-primary">Save changes</button>
     </div>
 </div>
