Showing detail in Order. Only first order shown.

--- a/WebShop/Areas/Admin/Views/UserModel/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/UserModel/Index.cshtml
@@ -1,9 +1,7 @@
-﻿
-@model IEnumerable<WebShop.Models.ApplicationUser>
+﻿@model IEnumerable<WebShop.Models.ApplicationUser>
 
 @{
     ViewData["Title"] = "Index";
-
 }
 
 <h2>User Manager</h2>
