--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -55,6 +55,10 @@
                         </li>
                         <partial name="_AdminMenuPartial" />
                         <partial name="_LoginPartial" />
+                        <li>
+                            <button class=" sidebarCollapse glyphicon glyphicon-shopping-cart"><span id="idCartCount" class="CartCount badge"></span></button>
+
+                        </li>
                     </ul>
                 </div>
             </header>
