--- a/WebShop/Views/Shared/_partialCartSummary.cshtml
+++ b/WebShop/Views/Shared/_partialCartSummary.cshtml
@@ -1,11 +1,6 @@
-﻿@model ProductViewModel
-<ul class="nav navbar-nav navbar-right">
-    <li>
-        <a >
-            Cart
-            @Html.DisplayFor(m => m.ListCart.Count)
-            
-        </a>
-    </li>
+﻿  @if (ViewData["CartCount"] != null)
+        {@ViewData["CartCount"]}
 
-</ul>
+        else
+        {<bre>0</bre>}
+ 
