--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
          }
 
         <div id="content">
-            @if (User.Identity.IsAuthenticated)
+            @*@if (User.Identity.IsAuthenticated)
             {
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
@@ -45,7 +45,7 @@
                         </button>
                     </div>
                 </nav>
-            }
+            }*@
            
             <header>
                 <h1 class="text-center">Web Shop</h1>
@@ -54,10 +54,17 @@
                         <li class="nav-item">
                             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <partial name="_AdminMenuPartial" />
-                        <partial name="_LoginPartial" />
+                            <partial name="_AdminMenuPartial" />
+                        
+                            <partial name="_LoginPartial" />
+                        
+                    </ul>
+                    <ul class="nav navbar-nav navbar-left">
                         <li>
-                            <button class=" sidebarCollapse glyphicon glyphicon-shopping-cart"><span id="idCartCount" class="CartCount badge"></span></button>
+                            <a id="sidebarCollapse">
+                                Cart
+                                <span id="idCartCount" class="glyphicon glyphicon-shopping-cart CartCount badge"></span>
+                            </a>
 
                         </li>
                     </ul>
